# QtTerminalExample

./: .gitignore  AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  README.md  connectiondialog.cpp  connectiondialog.h  enhanced_qtermwidget.cpp  enhanced_qtermwidget.h  main.cpp  terminalwindow.cpp  terminalwindow.h
qtermwidget/: CMakeLists.txt  cmake_uninstall.cmake
qtermwidget/lib/: qtermwidget.cpp
